// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialEmbedContainer AMP should render correctly 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-twitter"
      src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"
    />
  </head>
  <body>
    .c2 {
  position: relative;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

.c3:not(:focus):not(:active) {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px 1px 1px 1px);
  clip: rect(1px 1px 1px 1px);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  white-space: nowrap;
}

.c4 {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px 1px 1px 1px);
  clip: rect(1px 1px 1px 1px);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  white-space: nowrap;
}

.c0 {
  grid-column: 1 / span 6;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
}

.c1 .twitter-tweet,
.c1 .instagram-media {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.c1 .instagram-media {
  min-width: auto !important;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.8125rem;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <a
              class="c3"
              href="#skip-twitter-content-c063a42a"
            >
              Skip Twitter content
            </a>
            <amp-twitter
              data-tweetid="1237210910835392512"
              height="9"
              layout="responsive"
              width="16"
            />
            <p
              class="c4"
              id="skip-twitter-content-c063a42a"
              tabindex="-1"
            >
              End of Twitter content
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`SocialEmbedContainer Canonical should render correctly 1`] = `
.c2 {
  position: relative;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

.c3:not(:focus):not(:active) {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px 1px 1px 1px);
  clip: rect(1px 1px 1px 1px);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  white-space: nowrap;
}

.c5 {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px 1px 1px 1px);
  clip: rect(1px 1px 1px 1px);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  white-space: nowrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  grid-column: 1 / span 6;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
}

.c1 .twitter-tweet,
.c1 .instagram-media {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.c1 .instagram-media {
  min-width: auto !important;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.8125rem;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<html>
  <head>
    <script
      async="true"
      src="https://platform.twitter.com/widgets.js"
    />
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <a
              class="c3"
              href="#skip-twitter-content-c063a42a"
            >
              Skip Twitter content
            </a>
            <div
              class="c4"
            >
              <blockquote
                class="twitter-tweet"
              >
                <p
                  dir="ltr"
                  lang="en"
                >
                  Australia: Due to the recommendations of local, state, federal and international government authorities, including the Center for Disease Control, to reduce potential health risks in response to the current global health crisis, we are no longer traveling to Aus for the show.
                </p>
                — Miley Ray Cyrus (@MileyCyrus) 
                <a
                  href="https://twitter.com/MileyCyrus/status/1237210910835392512?ref_src=twsrc%5Etfw"
                >
                  March 10, 2020
                </a>
              </blockquote>
              

            </div>
            <p
              class="c5"
              id="skip-twitter-content-c063a42a"
              tabindex="-1"
            >
              End of Twitter content
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`SocialEmbedContainer Canonical should render correctly without an embed block 1`] = `
.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  border: 0.0625rem solid #AEAEB5;
  border-radius: 0.5rem;
  color: #222222;
  padding: 1rem;
}

.c2 p {
  margin-top: 0;
  margin-bottom: 0.5rem;
}

.c2 a,
.c2 small {
  display: block;
}

.c2 a {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a > span {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px 1px 1px 1px);
  clip: rect(1px 1px 1px 1px);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  white-space: nowrap;
}

.c2 small {
  margin-top: 0.5rem;
  font-size: 0.75rem;
  line-height: 1rem;
}

.c0 {
  grid-column: 1 / span 6;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 1.5rem;
  max-width: 31.25rem;
}

.c1 .twitter-tweet,
.c1 .instagram-media {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.c1 .instagram-media {
  min-width: auto !important;
}

@media (min-width:20rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <p>
        Sorry but we're having trouble displaying this content
      </p>
      <a
        href="https://twitter.com/MileyCyrus/status/1237210910835392512"
      >
        View content on Twitter
        <span>
          , external
        </span>
      </a>
    </div>
  </div>
</div>
`;
